add_executable (cpp_search_server "document.cpp" "document.h" "main.cpp" "paginator.h"  "read_input_functions.h" 
"remove_duplicates.cpp" "remove_duplicates.h" "request_queue.cpp" "request_queue.h" "search_server.cpp" "search_server.h" "string_processing.cpp" "string_processing.h" "test_example_functions.cpp"
"test_example_functions.h" "log_duration.h")